# rob_lab_mini_proj

./: .gitignore  README.md  rosconfig
aligner/: CMakeLists.txt  package.xml
hmc5883l_ros/: CMakeLists.txt  package.xml
hmc5883l_ros/launch/: demo.launch
hmc5883l_ros/msg/: hmc5883l_msg.msg
hmc5883l_ros/scripts/: demo.py  i2c_hmc5883l_pub.py
neom6_ros/: CMakeLists.txt  package.xml
neom6_ros/launch/: demo.launch  demo_fake.launch
neom6_ros/scripts/: demo.py  demo_fake.py  uart_neom6.py  uart_neom6_pub.py
