<?xml version="1.0"?>
<package format="2">
  <name>neom6_ros</name>
  <version>0.0.0</version>
  <description>The neom6_ros package</description>
  <maintainer email="user@todo.todo">Shashank Moghe</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
